plugin: rewrite build files from Kotlin to Groovy